src/parser/parser.output
Terminals unused in grammar

    OP_PIPE
    OP_PULL
    OP_PUSH


Grammar

    0 $accept: expressions $end

    1 expressions: expression.opt expressions.trail.rep

    2 expressions.trail.rep: %empty
    3                      | OP_EXPR_END whitespaces.opt expression.opt expressions.trail.rep

    4 expression.opt: %empty
    5               | pipe_expression

    6 pipe_expression: command pipe_expression.trail.rep

    7 pipe_expression.trail.rep: %empty
    8                          | '|' whitespaces.opt command pipe_expression.trail.rep

    9 command: argument_or_redirection argument_or_redirection.trail.rep

   10 argument_or_redirection.trail.rep: %empty
   11                                  | WHITESPACES argument_or_redirection.opt
   12                                  | redirection argument_or_redirection.trail.rep

   13 argument_or_redirection.opt: %empty
   14                            | argument_or_redirection argument_or_redirection.trail.rep

   15 argument_or_redirection: assignment_or_argument
   16                        | redirection

   17 assignment_or_argument: string

   18 redirection: '<' whitespaces.opt string
   19            | '>' whitespaces.opt string

   20 string: string_part string_part.rep

   21 string_part.rep: %empty
   22                | string_part string_part.rep

   23 string_part: STRING_PART
   24            | VARIABLE_READ
   25            | VARIABLE_WRITE

   26 whitespaces.opt: %empty
   27                | WHITESPACES


Terminals, with rules where they appear

    $end (0) 0
    '<' (60) 18
    '>' (62) 19
    '|' (124) 8
    error (256)
    STRING_PART <text> (258) 23
    VARIABLE_READ <text> (259) 24
    VARIABLE_WRITE <text> (260) 25
    WHITESPACES (261) 11 27
    OP_PIPE (262)
    OP_PULL (263)
    OP_PUSH (264)
    OP_EXPR_END (265) 3


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    expressions (15)
        on left: 1
        on right: 0
    expressions.trail.rep (16)
        on left: 2 3
        on right: 1 3
    expression.opt (17)
        on left: 4 5
        on right: 1 3
    pipe_expression (18)
        on left: 6
        on right: 5
    pipe_expression.trail.rep (19)
        on left: 7 8
        on right: 6 8
    command (20)
        on left: 9
        on right: 6 8
    argument_or_redirection.trail.rep (21)
        on left: 10 11 12
        on right: 9 12 14
    argument_or_redirection.opt (22)
        on left: 13 14
        on right: 11
    argument_or_redirection (23)
        on left: 15 16
        on right: 9 14
    assignment_or_argument (24)
        on left: 17
        on right: 15
    redirection (25)
        on left: 18 19
        on right: 12 16
    string (26)
        on left: 20
        on right: 17 18 19
    string_part.rep (27)
        on left: 21 22
        on right: 20 22
    string_part (28)
        on left: 23 24 25
        on right: 20 22
    whitespaces.opt (29)
        on left: 26 27
        on right: 3 8 18 19


State 0

    0 $accept: • expressions $end

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3
    '<'             shift, and go to state 4
    '>'             shift, and go to state 5

    $default  reduce using rule 4 (expression.opt)

    expressions              go to state 6
    expression.opt           go to state 7
    pipe_expression          go to state 8
    command                  go to state 9
    argument_or_redirection  go to state 10
    assignment_or_argument   go to state 11
    redirection              go to state 12
    string                   go to state 13
    string_part              go to state 14


State 1

   23 string_part: STRING_PART •

    $default  reduce using rule 23 (string_part)


State 2

   24 string_part: VARIABLE_READ •

    $default  reduce using rule 24 (string_part)


State 3

   25 string_part: VARIABLE_WRITE •

    $default  reduce using rule 25 (string_part)


State 4

   18 redirection: '<' • whitespaces.opt string

    WHITESPACES  shift, and go to state 15

    $default  reduce using rule 26 (whitespaces.opt)

    whitespaces.opt  go to state 16


State 5

   19 redirection: '>' • whitespaces.opt string

    WHITESPACES  shift, and go to state 15

    $default  reduce using rule 26 (whitespaces.opt)

    whitespaces.opt  go to state 17


State 6

    0 $accept: expressions • $end

    $end  shift, and go to state 18


State 7

    1 expressions: expression.opt • expressions.trail.rep

    OP_EXPR_END  shift, and go to state 19

    $default  reduce using rule 2 (expressions.trail.rep)

    expressions.trail.rep  go to state 20


State 8

    5 expression.opt: pipe_expression •

    $default  reduce using rule 5 (expression.opt)


State 9

    6 pipe_expression: command • pipe_expression.trail.rep

    '|'  shift, and go to state 21

    $default  reduce using rule 7 (pipe_expression.trail.rep)

    pipe_expression.trail.rep  go to state 22


State 10

    9 command: argument_or_redirection • argument_or_redirection.trail.rep

    WHITESPACES  shift, and go to state 23
    '<'          shift, and go to state 4
    '>'          shift, and go to state 5

    $default  reduce using rule 10 (argument_or_redirection.trail.rep)

    argument_or_redirection.trail.rep  go to state 24
    redirection                        go to state 25


State 11

   15 argument_or_redirection: assignment_or_argument •

    $default  reduce using rule 15 (argument_or_redirection)


State 12

   16 argument_or_redirection: redirection •

    $default  reduce using rule 16 (argument_or_redirection)


State 13

   17 assignment_or_argument: string •

    $default  reduce using rule 17 (assignment_or_argument)


State 14

   20 string: string_part • string_part.rep

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3

    $default  reduce using rule 21 (string_part.rep)

    string_part.rep  go to state 26
    string_part      go to state 27


State 15

   27 whitespaces.opt: WHITESPACES •

    $default  reduce using rule 27 (whitespaces.opt)


State 16

   18 redirection: '<' whitespaces.opt • string

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3

    string       go to state 28
    string_part  go to state 14


State 17

   19 redirection: '>' whitespaces.opt • string

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3

    string       go to state 29
    string_part  go to state 14


State 18

    0 $accept: expressions $end •

    $default  accept


State 19

    3 expressions.trail.rep: OP_EXPR_END • whitespaces.opt expression.opt expressions.trail.rep

    WHITESPACES  shift, and go to state 15

    $default  reduce using rule 26 (whitespaces.opt)

    whitespaces.opt  go to state 30


State 20

    1 expressions: expression.opt expressions.trail.rep •

    $default  reduce using rule 1 (expressions)


State 21

    8 pipe_expression.trail.rep: '|' • whitespaces.opt command pipe_expression.trail.rep

    WHITESPACES  shift, and go to state 15

    $default  reduce using rule 26 (whitespaces.opt)

    whitespaces.opt  go to state 31


State 22

    6 pipe_expression: command pipe_expression.trail.rep •

    $default  reduce using rule 6 (pipe_expression)


State 23

   11 argument_or_redirection.trail.rep: WHITESPACES • argument_or_redirection.opt

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3
    '<'             shift, and go to state 4
    '>'             shift, and go to state 5

    $default  reduce using rule 13 (argument_or_redirection.opt)

    argument_or_redirection.opt  go to state 32
    argument_or_redirection      go to state 33
    assignment_or_argument       go to state 11
    redirection                  go to state 12
    string                       go to state 13
    string_part                  go to state 14


State 24

    9 command: argument_or_redirection argument_or_redirection.trail.rep •

    $default  reduce using rule 9 (command)


State 25

   12 argument_or_redirection.trail.rep: redirection • argument_or_redirection.trail.rep

    WHITESPACES  shift, and go to state 23
    '<'          shift, and go to state 4
    '>'          shift, and go to state 5

    $default  reduce using rule 10 (argument_or_redirection.trail.rep)

    argument_or_redirection.trail.rep  go to state 34
    redirection                        go to state 25


State 26

   20 string: string_part string_part.rep •

    $default  reduce using rule 20 (string)


State 27

   22 string_part.rep: string_part • string_part.rep

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3

    $default  reduce using rule 21 (string_part.rep)

    string_part.rep  go to state 35
    string_part      go to state 27


State 28

   18 redirection: '<' whitespaces.opt string •

    $default  reduce using rule 18 (redirection)


State 29

   19 redirection: '>' whitespaces.opt string •

    $default  reduce using rule 19 (redirection)


State 30

    3 expressions.trail.rep: OP_EXPR_END whitespaces.opt • expression.opt expressions.trail.rep

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3
    '<'             shift, and go to state 4
    '>'             shift, and go to state 5

    $default  reduce using rule 4 (expression.opt)

    expression.opt           go to state 36
    pipe_expression          go to state 8
    command                  go to state 9
    argument_or_redirection  go to state 10
    assignment_or_argument   go to state 11
    redirection              go to state 12
    string                   go to state 13
    string_part              go to state 14


State 31

    8 pipe_expression.trail.rep: '|' whitespaces.opt • command pipe_expression.trail.rep

    STRING_PART     shift, and go to state 1
    VARIABLE_READ   shift, and go to state 2
    VARIABLE_WRITE  shift, and go to state 3
    '<'             shift, and go to state 4
    '>'             shift, and go to state 5

    command                  go to state 37
    argument_or_redirection  go to state 10
    assignment_or_argument   go to state 11
    redirection              go to state 12
    string                   go to state 13
    string_part              go to state 14


State 32

   11 argument_or_redirection.trail.rep: WHITESPACES argument_or_redirection.opt •

    $default  reduce using rule 11 (argument_or_redirection.trail.rep)


State 33

   14 argument_or_redirection.opt: argument_or_redirection • argument_or_redirection.trail.rep

    WHITESPACES  shift, and go to state 23
    '<'          shift, and go to state 4
    '>'          shift, and go to state 5

    $default  reduce using rule 10 (argument_or_redirection.trail.rep)

    argument_or_redirection.trail.rep  go to state 38
    redirection                        go to state 25


State 34

   12 argument_or_redirection.trail.rep: redirection argument_or_redirection.trail.rep •

    $default  reduce using rule 12 (argument_or_redirection.trail.rep)


State 35

   22 string_part.rep: string_part string_part.rep •

    $default  reduce using rule 22 (string_part.rep)


State 36

    3 expressions.trail.rep: OP_EXPR_END whitespaces.opt expression.opt • expressions.trail.rep

    OP_EXPR_END  shift, and go to state 19

    $default  reduce using rule 2 (expressions.trail.rep)

    expressions.trail.rep  go to state 39


State 37

    8 pipe_expression.trail.rep: '|' whitespaces.opt command • pipe_expression.trail.rep

    '|'  shift, and go to state 21

    $default  reduce using rule 7 (pipe_expression.trail.rep)

    pipe_expression.trail.rep  go to state 40


State 38

   14 argument_or_redirection.opt: argument_or_redirection argument_or_redirection.trail.rep •

    $default  reduce using rule 14 (argument_or_redirection.opt)


State 39

    3 expressions.trail.rep: OP_EXPR_END whitespaces.opt expression.opt expressions.trail.rep •

    $default  reduce using rule 3 (expressions.trail.rep)


State 40

    8 pipe_expression.trail.rep: '|' whitespaces.opt command pipe_expression.trail.rep •

    $default  reduce using rule 8 (pipe_expression.trail.rep)
